--- a/css/style.css
+++ b/css/style.css
@@ -254,10 +254,11 @@ footer p {
  ****************************/
 section {
   padding: 20px;
+  background-color: #fefefe;
 }
 
 .contactus {
-  background: #f9f9f9;
+  background: #eee;
 }
 
 .row-padded {
@@ -291,9 +292,16 @@ section p {
   line-height: 1.8em;
 }
 
+p.pptintro{
+  margin-top: 15px;
+  font-size: 16px;
+}
+
 .avatar {
   margin-top: 8px;
   margin-bottom: 20px;
+  -moz-box-shadow: 10px 10px 10px rgba(0,0,0,.5);
+  -webkit-box-shadow: 10px 10px 10px rgba(0,0,0,.5);
 }
 
 .avatar img {
@@ -301,7 +309,7 @@ section p {
 }
 
 .services {
-  background-color: #f9f9f9;
+  background-color: #fefefe;
 }
 
 .inner {
